--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-llm-chain = "0.13.0"
-llm-chain-llama = "0.13.0"
-tokio = { version = "1.40.0", features = ["full"] }
+anyhow = "1.0.89"
+mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
+tokio = "1.40.0"
