feat(*): second iteration with llama_cpp and rusqlite

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.89"
-mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
-tokio = "1.40.0"
+llama_cpp = { version = "0.3.2", features = ["metal"] }
+rusqlite = "0.32.1"
